SEO , AI SEO , Services inner page

--- a/client/index.html
+++ b/client/index.html
@@ -4,15 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
 
-    <meta property="og:title" content="Areeb Tech - Future Ready IT Solutions" />
-    <meta property="og:description" content="Pioneering digital transformation with cutting-edge technology." />
+    <title>Areeb Tech | IT & AI Company in Jordan</title>
+    <meta property="og:title" content="Areeb Tech | IT & AI Company in Jordan" />
+    <meta name="description" content="Areeb Tech - Leading IT and AI company in Jordan. Specializing in Software Solutions, Odoo ERP, Call Center solutions, Point of Sale (POS) systems, Digital Transformation, and AI-powered technology services. Best IT companies in Jordan, AI companies in Jordan, Agent Call Center solutions, POS systems." />
+    <meta name="keywords" content="IT companies in Jordan, AI companies in Jordan, IT services Jordan, AI services Jordan, Software Solutions, Odoo ERP, Call Center solutions, Agent Call Center, Point of Sale, POS systems, Digital Transformation, IT Managed Services, Voice AI, AI Agents, Technology services Amman, Software development Jordan" />
+    <meta property="og:description" content="Areeb Tech - Leading IT and AI company in Jordan. Specializing in Software Solutions, Odoo ERP, Call Center solutions, Point of Sale (POS) systems, Digital Transformation, and AI-powered technology services." />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.areebb.com/" />
     <meta property="og:image" content="https://replit.com/public/images/opengraph.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@replit" />
-    <meta name="twitter:title" content="Areeb Tech - Future Ready IT Solutions" />
-    <meta name="twitter:description" content="Pioneering digital transformation with cutting-edge technology." />
+    <meta name="twitter:title" content="Areeb Tech | IT & AI Company in Jordan" />
+    <meta name="twitter:description" content="Areeb Tech - Leading IT and AI company in Jordan. Specializing in Software Solutions, Odoo ERP, Call Center solutions, Point of Sale (POS) systems, Digital Transformation, and AI-powered technology services." />
     <meta name="twitter:image" content="https://replit.com/public/images/opengraph.png" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.areebb.com/" />
+    
+    <!-- Hreflang Tags -->
+    <link rel="alternate" hreflang="en" href="https://www.areebb.com/?lang=en" />
+    <link rel="alternate" hreflang="ar" href="https://www.areebb.com/?lang=ar" />
+    <link rel="alternate" hreflang="x-default" href="https://www.areebb.com/?lang=ar" />
 
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
