--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="author" content="Areeb Tech" />
+    <meta name="theme-color" content="#00ff88" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="format-detection" content="telephone=yes" />
 
     <title>Areeb Tech | IT & AI Company in Jordan</title>
     <meta property="og:title" content="Areeb Tech | IT & AI Company in Jordan" />
@@ -10,13 +17,21 @@
     <meta name="keywords" content="IT companies in Jordan, AI companies in Jordan, IT services Jordan, AI services Jordan, Software Solutions, Odoo ERP, Call Center solutions, Agent Call Center, Point of Sale, POS systems, Digital Transformation, IT Managed Services, Voice AI, AI Agents, Technology services Amman, Software development Jordan" />
     <meta property="og:description" content="Areeb Tech - Leading IT and AI company in Jordan. Specializing in Software Solutions, Odoo ERP, Call Center solutions, Point of Sale (POS) systems, Digital Transformation, and AI-powered technology services." />
     <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Areeb Tech" />
     <meta property="og:url" content="https://www.areebb.com/" />
-    <meta property="og:image" content="https://replit.com/public/images/opengraph.png" />
+    <meta property="og:image" content="https://www.areebb.com/opengraph.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Areeb Tech - IT & AI Company in Jordan" />
+    <meta property="og:locale" content="ar_JO" />
+    <meta property="og:locale:alternate" content="en_US" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@replit" />
+    <meta name="twitter:site" content="@areebtech" />
+    <meta name="twitter:creator" content="@areebtech" />
     <meta name="twitter:title" content="Areeb Tech | IT & AI Company in Jordan" />
     <meta name="twitter:description" content="Areeb Tech - Leading IT and AI company in Jordan. Specializing in Software Solutions, Odoo ERP, Call Center solutions, Point of Sale (POS) systems, Digital Transformation, and AI-powered technology services." />
-    <meta name="twitter:image" content="https://replit.com/public/images/opengraph.png" />
+    <meta name="twitter:image" content="https://www.areebb.com/opengraph.jpg" />
+    <meta name="twitter:image:alt" content="Areeb Tech - IT & AI Company in Jordan" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.areebb.com/" />
@@ -34,6 +49,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    
+    <!-- DNS Prefetch for performance -->
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+    
+    <!-- Additional SEO Meta Tags -->
+    <meta name="geo.region" content="JO" />
+    <meta name="geo.placename" content="Amman" />
+    <meta name="geo.position" content="31.9539;35.8800" />
+    <meta name="ICBM" content="31.9539, 35.8800" />
+    <meta name="coverage" content="Worldwide" />
+    <meta name="distribution" content="Global" />
+    <meta name="rating" content="General" />
   </head>
   <body>
     <div id="root"></div>
