Email, Phone , Social Media Links

--- a/client/index.html
+++ b/client/index.html
@@ -5,33 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
     <meta name="googlebot" content="index, follow" />
-    <meta name="author" content="Areeb Tech" />
+    <meta name="author" content="Areeb" />
     <meta name="theme-color" content="#00ff88" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="format-detection" content="telephone=yes" />
 
-    <title>Areeb Tech | IT & AI Company in Jordan</title>
-    <meta property="og:title" content="Areeb Tech | IT & AI Company in Jordan" />
-    <meta name="description" content="Areeb Tech - Leading IT and AI company in Jordan. Specializing in Software Solutions, Odoo ERP, Call Center solutions, Point of Sale (POS) systems, Digital Transformation, and AI-powered technology services. Best IT companies in Jordan, AI companies in Jordan, Agent Call Center solutions, POS systems." />
+    <title>Areeb | IT & AI Company in Jordan</title>
+    <meta property="og:title" content="Areeb | IT & AI Company in Jordan" />
+    <meta name="description" content="Areeb - Leading IT and AI company in Jordan. Specializing in Software Solutions, Odoo ERP, Call Center solutions, Point of Sale (POS) systems, Digital Transformation, and AI-powered technology services. Best IT companies in Jordan, AI companies in Jordan, Agent Call Center solutions, POS systems." />
     <meta name="keywords" content="IT companies in Jordan, AI companies in Jordan, IT services Jordan, AI services Jordan, Software Solutions, Odoo ERP, Call Center solutions, Agent Call Center, Point of Sale, POS systems, Digital Transformation, IT Managed Services, Voice AI, AI Agents, Technology services Amman, Software development Jordan" />
-    <meta property="og:description" content="Areeb Tech - Leading IT and AI company in Jordan. Specializing in Software Solutions, Odoo ERP, Call Center solutions, Point of Sale (POS) systems, Digital Transformation, and AI-powered technology services." />
+    <meta property="og:description" content="Areeb - Leading IT and AI company in Jordan. Specializing in Software Solutions, Odoo ERP, Call Center solutions, Point of Sale (POS) systems, Digital Transformation, and AI-powered technology services." />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Areeb Tech" />
+    <meta property="og:site_name" content="Areeb" />
     <meta property="og:url" content="https://www.areebb.com/" />
     <meta property="og:image" content="https://www.areebb.com/opengraph.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Areeb Tech - IT & AI Company in Jordan" />
+    <meta property="og:image:alt" content="Areeb - IT & AI Company in Jordan" />
     <meta property="og:locale" content="ar_JO" />
     <meta property="og:locale:alternate" content="en_US" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@areebtech" />
     <meta name="twitter:creator" content="@areebtech" />
-    <meta name="twitter:title" content="Areeb Tech | IT & AI Company in Jordan" />
-    <meta name="twitter:description" content="Areeb Tech - Leading IT and AI company in Jordan. Specializing in Software Solutions, Odoo ERP, Call Center solutions, Point of Sale (POS) systems, Digital Transformation, and AI-powered technology services." />
+    <meta name="twitter:title" content="Areeb | IT & AI Company in Jordan" />
+    <meta name="twitter:description" content="Areeb - Leading IT and AI company in Jordan. Specializing in Software Solutions, Odoo ERP, Call Center solutions, Point of Sale (POS) systems, Digital Transformation, and AI-powered technology services." />
     <meta name="twitter:image" content="https://www.areebb.com/opengraph.jpg" />
-    <meta name="twitter:image:alt" content="Areeb Tech - IT & AI Company in Jordan" />
+    <meta name="twitter:image:alt" content="Areeb - IT & AI Company in Jordan" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.areebb.com/" />
